--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/websockets": "^10.4.1",
+    "@types/cookie-parser": "^1.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "mongoose": "^8.6.1",
     "openai": "^4.57.2",
