--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.1",
-    "@nestjs/event-emitter": "^0.0.3",
+    "@nestjs/common": "^10.4.3",
+    "@nestjs/core": "^10.4.3",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^9.1.1",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.1",
-    "@nestjs/platform-socket.io": "^10.4.1",
-    "@nestjs/websockets": "^10.4.1",
-    "@types/cookie-parser": "^1.4.7",
+    "@nestjs/platform-express": "^10.4.3",
+    "@nestjs/platform-socket.io": "^10.4.3",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
@@ -46,9 +44,7 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.4.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.96",
