--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "nodemon": "^3.1.4",
