--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.3",
     "@nestjs/core": "^10.4.3",
     "@nestjs/event-emitter": "^2.0.4",
