--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.3",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.3",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
